<resources>
    <string name="app_name">App Cliente VIP</string>
    <string name="admin_name">Fabricio Bizotto</string>
    <string name="txtNomeUsuario">Informe seu Nome</string>
    <string name="txtEmailUsuario">Informe seu E-mail</string>
    <string name="txtSenhalUsuario">Senha</string>
    <string name="edtSenhaHint">Informe sua Senha</string>
    <string name="txtSenhaConfirmar">Repetir a Senha</string>
    <string name="edtSenhaConfirmarHint">Repita sua Senha</string>
    <string name="txtSenhasDiferentes">As senhas não são iguais</string>
    <string name="txtLogin">Login</string>
    <string name="txtLembrarUsuario">Lembrar?</string>
    <string name="txtRecurarSenha">Recuperar Senha</string>
    <string name="btnAcessar">Acessar</string>
    <string name="btnSejaVip">Seja VIP</string>
    <string name="txtVersapApp">v1.0</string>
    <string name="txtLerPolitica">Ler Políticas de Privacidade - Termos de Uso</string>
    <string name="termos_uso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean congue tincidunt ex, sed cursus nisi finibus non. Integer varius ex at risus sagittis volutpat. Nullam euismod venenatis turpis lacinia tincidunt. Nulla eget metus eros. Aenean in neque feugiat, hendrerit sapien eget, ullamcorper quam. Phasellus vitae pulvinar nisi, nec consequat metus. Morbi auctor vehicula massa, ut dapibus ex dapibus vitae. Sed sed elit sagittis, consequat mi nec, porta massa. Nulla facilisi. In nisl tortor, ultricies ut pellentesque id, eleifend vitae massa. Phasellus pellentesque condimentum justo nec aliquam.</string>
    <string name="naoTemContaAinda">Não possui conta? Crie sua Conta.</string>
    <string name="termos_uso_error">É necessário ler e confirmar os termos de uso.</string>
    <string name="usuario_email_existe">E-mail já está sendo utilizado!</string>
</resources>
