<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formCadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".UsuarioFormActivity">

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Cadastro"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNomeUsuario"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtNomeUsuario"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEmailUsuario"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtEmailUsuario"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSenhalUsuario"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtSenhaHint"
        android:inputType="numberPassword" />

    <TextView
        android:id="@+id/txtSenhaConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSenhaConfirmar"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSenhaConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtSenhaConfirmarHint"
        android:inputType="numberPassword" />

    <CheckBox
        android:id="@+id/chkConfirmarTermos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="validarTermoUso"
        android:text="Li e concordo com os termos de uso" />

    <Button
        android:id="@+id/btnCadastrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="20dp"
        android:text="Cadastrar"
        android:textColor="@color/white" />


</androidx.appcompat.widget.LinearLayoutCompat>