<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textSize="36dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/txtLogin"
        android:textColor="@color/colorPrimary"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmailUsuario"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtEmailUsuario"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txtSenhaA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSenhalUsuario"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSenhaA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtSenhalUsuario"
        android:inputType="numberPassword" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkLembrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txtLembrarUsuario"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRecurarSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:padding="9dp"
            android:text="@string/txtRecurarSenha"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnAcessar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/btnAcessar"
            android:textColor="@color/white_smoke"
            android:layout_marginHorizontal="8dp"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnSejaVip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white_smoke"
            android:text="@string/btnSejaVip"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVersaoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/txtVersapApp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLerPolitica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/txtLerPolitica"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14dp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>